force-app/main/default/objects/aos_Support_Request__c/fields/aos_This_request_is_for_animal_s__c.field-meta.xml
<CustomField>
    <fullName>aos_This_request_is_for_animal_s__c</fullName>
    <label>This Request is For Animal/s Requiring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available for adoption from foster care</fullName>
            </value>
            <value>
                <fullName>Behavioural foster care</fullName>
            </value>
            <value>
                <fullName>Community Programs</fullName>
            </value>
            <value>
                <fullName>General Foster care</fullName>
            </value>
            <value>
                <fullName>Inspectorate Foster care</fullName>
            </value>
            <value>
                <fullName>Medical Foster Care e.g. recovering/pending surgery</fullName>
            </value>
            <value>
                <fullName>Neonates with mums</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>