force-app/main/default/objects/aos_Support_Request__c/fields/aos_Travel_By_Plane__c.field-meta.xml
<CustomField>
    <fullName>aos_Travel_By_Plane__c</fullName>
    <inlineHelpText>Is this animal behaviourally/medically well to travel by plane if required?</inlineHelpText>
    <label>Travel By Plane</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>