force-app/main/default/objects/aos_Support_Request__c/fields/aos_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Type__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In care</fullName>
            </value>
            <value>
                <fullName>Post adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>