force-app/main/default/objects/aos_Support_Request__c/fields/aos_Vaccination_First_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Vaccination_First_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vaccination First Type</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>Vaccination First Type</relationshipLabel>
    <relationshipName>aos_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>