force-app/main/default/objects/aos_Support_Request__c/fields/aos_Vaccination_Second_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Vaccination_Second_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vaccination Second Type</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>Vaccination Second Type</relationshipLabel>
    <relationshipName>Support_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>