force-app/main/default/objects/aos_Support_Request__c/fields/aos_Vaccination_Third_Ttype__c.field-meta.xml
<CustomField>
    <fullName>aos_Vaccination_Third_Ttype__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vaccination Third Ttype</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>Vaccination Third Ttype</relationshipLabel>
    <relationshipName>Support_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>