force-app/main/default/objects/aos_Support_Request__c/fields/aos_ve_comments_about_animal_s_behaviour__c.field-meta.xml
<CustomField>
    <fullName>aos_ve_comments_about_animal_s_behaviour__c</fullName>
    <label>+ve comments about animal’s behaviour</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>