force-app/main/default/objects/aos_Support_Request__c/fields/aos_Vetinary_Visits_due__c.field-meta.xml
<CustomField>
    <fullName>aos_Vetinary_Visits_due__c</fullName>
    <label>Vetinary Visit/s Due</label>
    <length>255</length>
    <type>Text</type>
</CustomField>