force-app/main/default/objects/aos_Support_Request__c/fields/aos_Weight__c.field-meta.xml
<CustomField>
    <fullName>aos_Weight__c</fullName>
    <formula>aos_Animal__r.animalos__Current_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>