force-app/main/default/objects/aos_Support_Request__c/fields/aos_WFHP_Third_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_WFHP_Third_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Worming, flea, and heartworm prevention</inlineHelpText>
    <label>WFHP Third Type</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>WFHP Third Type</relationshipLabel>
    <relationshipName>Support_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>