force-app/main/default/objects/aos_Support_Request__c/fields/aos_Who_was_notified__c.field-meta.xml
<CustomField>
    <fullName>aos_Who_was_notified__c</fullName>
    <label>Who was notified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>