force-app/main/default/objects/aos_Support_Request__c/fields/aos_X5_Ideal_requirements_from_Foster__c.field-meta.xml
<CustomField>
    <fullName>aos_X5_Ideal_requirements_from_Foster__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Ideal requirements from Foster Carer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A quiet home</fullName>
            </value>
            <value>
                <fullName>Experienced carer</fullName>
            </value>
            <value>
                <fullName>Active lifestyle</fullName>
            </value>
            <value>
                <fullName>No specific requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>