force-app/main/default/objects/aos_Support_Request__c/recordTypes/aos_Behaviour_Support.recordType-meta.xml
<RecordType>
    <fullName>aos_Behaviour_Support</fullName>
    <active>true</active>
    <label>Behaviour Support</label>
</RecordType>