force-app/main/default/objects/aos_Support_Request__c/recordTypes/aos_Foster_Care_Animal_Details_Layout.recordType-meta.xml
<RecordType>
    <fullName>aos_Foster_Care_Animal_Details_Layout</fullName>
    <active>true</active>
    <label>Foster Care Animal Details Layout</label>
</RecordType>