force-app/main/default/objects/aos_Support_Request__c/recordTypes/aos_Foster_Care_Request.recordType-meta.xml
<RecordType>
    <fullName>aos_Foster_Care_Request</fullName>
    <active>true</active>
    <label>Foster Care Request</label>
</RecordType>