force-app/main/default/objects/aos_Support_Request__c/recordTypes/aos_Rehab_Site_Placement.recordType-meta.xml
<RecordType>
    <fullName>aos_Rehab_Site_Placement</fullName>
    <active>true</active>
    <label>Rehab Site Placement</label>
</RecordType>