force-app/main/default/objects/aos_Support_Request__c/recordTypes/aos_Rescue_Placement_Request.recordType-meta.xml
<RecordType>
    <fullName>aos_Rescue_Placement_Request</fullName>
    <active>true</active>
    <label>Rescue Placement Request</label>
</RecordType>