force-app/main/default/objects/aos_Support_Request__c/recordTypes/aos_Vet_Check_Request.recordType-meta.xml
<RecordType>
    <fullName>aos_Vet_Check_Request</fullName>
    <active>true</active>
    <label>Vet Check Request</label>
</RecordType>