force-app/main/default/objects/aos_Support_Request__c/validationRules/aos_Require_Declined_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>aos_Require_Declined_Reason</fullName>
    <active>true</active>
    <description>Ensures that the Declined Reason field is populated whenever the Status field is set to &quot;Declined&quot;. Prevents saving the record without a reason when a decline is recorded.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(aos_Request_Status__c, &quot;Declined&quot;),
    ISPICKVAL(aos_Declined_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>aos_Declined_Reason__c</errorDisplayField>
    <errorMessage>Declined Reason must be populated when Request Status is set to Declined.</errorMessage>
</ValidationRule>