force-app/main/default/objects/aos_Support_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>aos_Animal__c</columns>
    <columns>aos_Urgency__c</columns>
    <columns>aos_Type__c</columns>
    <columns>aos_Start_Date__c</columns>
    <columns>aos_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>