force-app/main/default/objects/aos_Support_Request__c/listViews/aos_All_Behaviour_Support_Requests.listView-meta.xml
<ListView>
    <fullName>aos_All_Behaviour_Support_Requests</fullName>
    <columns>NAME</columns>
    <columns>aos_Animal__c</columns>
    <columns>aos_Request_Shelter_Location_Name__c</columns>
    <columns>aos_Urgency__c</columns>
    <columns>aos_Type__c</columns>
    <columns>aos_Start_Date__c</columns>
    <columns>aos_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>aos_Support_Request__c.aos_Behaviour_Support</value>
    </filters>
    <label>All Behaviour Support Requests</label>
</ListView>